@@ -1,4 +1,8 @@
-﻿shmuel 12.04.2015 23:18:52 +0200 - build 507
+﻿shmuel 17.04.2015 00:31:25 +0200 - build 508
+
+1. M#2986: far /e падает при попытке вызвать юзер меню макросом.
+
+shmuel 12.04.2015 23:18:52 +0200 - build 507
 
 1. Рефакторинг.
 
